Use minacle/jq image in Woodpecker pipeline
- Replace ghcr.io/jqlang/jq with minacle/jq in .woodpecker/build.yaml (parse step)
- Reason: the upstream ghcr.io/jqlang/jq image did not include /bin/sh, causing shell commands (eg. export IMAGE_VERSION=...) to fail
- Use my own minacle/jq image which includes /bin/sh so the parse step runs correctly

--- a/.woodpecker/build.yaml
+++ b/.woodpecker/build.yaml
@@ -19,7 +19,7 @@ steps:
     commands:
       - curl -fsSL https://api.github.com/repos/DNSCrypt/dnscrypt-proxy/releases/latest -o release.json
   - name: parse
-    image: ghcr.io/jqlang/jq
+    image: minacle/jq
     commands:
       - export IMAGE_VERSION=$(cat release.json | jq -r '.tag_name')
       - echo "IMAGE_VERSION=$IMAGE_VERSION" >> ../.ci-${CI_PIPELINE_PARENT}-${CI_PIPELINE_NUMBER}.env
