--- a/.woodpecker/build.yaml
+++ b/.woodpecker/build.yaml
@@ -23,7 +23,7 @@ steps:
     commands:
       - export IMAGE_VERSION=$(cat release.json | jq -r '.tag_name')
       - echo "IMAGE_VERSION=$IMAGE_VERSION" >> ../.ci-${CI_PIPELINE_PARENT}-${CI_PIPELINE_NUMBER}.env
-      - export IMAGE_PLATFORM=$(echo ${platform} | sed 's/linux\///')
+      - export IMAGE_PLATFORM=$(echo ${platform} | sed 's/linux\\///')
       - echo "IMAGE_PLATFORM=$IMAGE_PLATFORM" >> ../.ci-${CI_PIPELINE_PARENT}-${CI_PIPELINE_NUMBER}.env
       - export DOWNLOAD_URL=$(cat release.json | jq -r '.assets[] | select(.name | test("^dnscrypt-proxy-linux_'$${IMAGE_PLATFORM}'-.*\\\\.tar\\\\.gz$")) | .browser_download_url')
       - echo "DOWNLOAD_URL=$DOWNLOAD_URL" >> ../.ci-${CI_PIPELINE_PARENT}-${CI_PIPELINE_NUMBER}.env
