Translate amd64 to x86_64 for dnscrypt-proxy downloads
- Add conditional in .woodpecker/build.yaml to convert IMAGE_PLATFORM="amd64" to "x86_64"
- Rationale: release asset names use x86_64 while CI/platform reporting may produce amd64; this ensures the jq filter finds the correct DOWNLOAD_URL
- Keeps existing platform normalisation and download extraction logic intact

--- a/.woodpecker/build.yaml
+++ b/.woodpecker/build.yaml
@@ -25,6 +25,7 @@ steps:
       - echo "IMAGE_VERSION=$${IMAGE_VERSION}" >> ../.ci-${CI_PIPELINE_PARENT}-${CI_PIPELINE_NUMBER}.env
       - export IMAGE_PLATFORM=$(echo ${platform} | sed 's/linux\\///')
       - echo "IMAGE_PLATFORM=$${IMAGE_PLATFORM}" >> ../.ci-${CI_PIPELINE_PARENT}-${CI_PIPELINE_NUMBER}.env
+      - if [ "$${IMAGE_PLATFORM}" = "amd64" ]; then export IMAGE_PLATFORM="x86_64"; fi
       - export DOWNLOAD_URL=$(cat release.json | jq -r '.assets[] | select(.name | test("^dnscrypt-proxy-linux_'$${IMAGE_PLATFORM}'-.*\\\\.tar\\\\.gz$")) | .browser_download_url')
       - echo "DOWNLOAD_URL=$${DOWNLOAD_URL}" >> ../.ci-${CI_PIPELINE_PARENT}-${CI_PIPELINE_NUMBER}.env
       - echo "IMAGE_VERSION=$${IMAGE_VERSION}"
